--- a/client/src/app/study/learn-card/learn-card.component.css
+++ b/client/src/app/study/learn-card/learn-card.component.css
@@ -141,8 +141,8 @@
   }
 
   .grading-buttons-container {
-    width: 50%;
-    margin-left: 50%;
+    width: 45%;
+    margin-left: 55%;
     margin-top: -90px;
   }
 }
